--- a/index.html
+++ b/index.html
@@ -7,46 +7,46 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
-<body>
+<body class="wrapper">
 
-  <section class="section wrapper pad-top-double">
+  <section class="section pad-top-double pad-bottom">
     <div>
 
-      <figure class="photo island-half">
-        <img class="img-flex" src="images/venus.jpg" alt="">
+      <figure class="photo island-half push-double">
+        <img class="img-flex sub" src="images/venus.jpg" alt="">
         <figcaption class="italic text-center milli">A real-colour image of Venus.</figcaption>
       </figure>
 
       <div class="info">
-        <h1>Venus</h1>
+        <h1 class="push-none peta">Venus</h1>
         <p class="mega italic">Venus, the second planet in the Solar System.</p>
-        <p class="max-length">Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
+        <p class="max-length-no-center text-left">Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
-        <div class="details max-length legend">
+        <div class="details max-length gutter-1-4">
           <h2 class="mega">Physical characteristics</h2>
           <dl>
-            <dt class="milli">Mean radius</dt>
-            <dd class="mega"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
-            <dt class="milli">Mass</dt>
-            <dd class="mega"><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
-            <dt class="milli">Surface gravity</dt>
-            <dd class="mega"><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
-            <dt class="milli">Axial tilt</dt>
-            <dd class="mega"><data value="177.36">177.36°</data></dd>
+            <dt class="milli push-none">Mean radius</dt>
+            <dd class="mega push-none"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
+            <dt class="milli push-none">Mass</dt>
+            <dd class="mega push-none"><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
+            <dt class="milli push-none">Surface gravity</dt>
+            <dd class="mega push-none"><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
+            <dt class="milli push-none">Axial tilt</dt>
+            <dd class="mega push-none"><data value="177.36">177.36°</data></dd>
           </dl>
         </div>
 
         <div class="details max-length">
           <h2 class="mega">Orbital Characteristics</h2>
           <dl>
-            <dt class="milli">Aphelion</dt>
-            <dd class="mega"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
-            <dt class="milli">Perihelion</dt>
-            <dd class="mega"><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
-            <dt class="milli">Orbital period</dt>
-            <dd class="mega"><data value="224.701">224.701&nbsp;d</data></dd>
-            <dt class="milli">Average orbital speed</dt>
-            <dd class="mega"><data value="35.02">35.02&nbsp;km/s</data></dd>
+            <dt class="milli push-none">Aphelion</dt>
+            <dd class="mega push-none"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
+            <dt class="milli push-none">Perihelion</dt>
+            <dd class="mega push-none"><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
+            <dt class="milli push-none">Orbital period</dt>
+            <dd class="mega push-none"><data value="224.701">224.701&nbsp;d</data></dd>
+            <dt class="milli push-none">Average orbital speed</dt>
+            <dd class="mega push-none"><data value="35.02">35.02&nbsp;km/s</data></dd>
           </dl>
         </div>
       </div>
